# Polyglot_BackEnd

./: .env  .gitignore  alembic.ini  app.py  database.db  merge_project.ps1  projeto_unico.py  pyproject.toml  requirements.txt
logs/: log.jsonl
src/: main.py  settings.py
src/core/: auth.py  database.py
src/migrations/: env.py
src/migrations/versions/: c379102cd03d_atualizando_a_tabela_de_usuarios.py  fc117b42a38e_primeiro.py
src/routes/: Token.py  User.py  compras.py  payment_methods.py  products.py  user.py
src/schemas/: Token.py  User.py  compras.py  payment_methods.py  products.py  user.py
src/utils/: relational_utils.py
